--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </form>
     <div class="todo-container">
         <ul class="todo-list"></ul>
-    </div>
+       </div>
 
-    <script> src="./app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
  
