all completed uncompleted

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <button class="todo-button" type="submit">
             <i class="fa-solid fa-check"></i>
         </button>
+        <div class="select">
+            <select name="todos"class="filter-todo">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
     <div class="todo-container">
         <ul class="todo-list"></ul>
@@ -33,4 +40,5 @@
     <script src="./app.js"></script>
 </body>
 </html>
+
  
